--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -81,13 +81,16 @@ zh-CN:
         city_name: "城市"
       order:
         consumer: "用户"
+        consumer_id: "用户"
         address: "配送地址"
+        address_id: "配送地址"
         state: "支付状态"
         handle_state: "处理状态"
         sn: "订单号"
         total_price: "总价"
         products: "包含商品"
         customers: "所属商家"
+        customer_id: "所属商家"
         ship_fee: "运费"
         created_at: "创建时间"
         updated_at: "更新时间"
