--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -35,7 +35,7 @@ zh-CN:
       product: "商品"
       news: "新闻"
       education: "VIP大课堂"
-      create_space: "众创空间"
+      create_space: "开街创谷"
       road_show: "路演展示"
       job: "就业信息"
       activity: "活动展示"
