--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -232,6 +232,7 @@ zh-CN:
         service: "售后服务"
         free_ship: "是否免运费"
         cash_on_delivery: "货到付款方式"
+        archive: "封存?"
         created_at: "创建时间"
         updated_at: "更新时间"
       news:
